<resources>
    <string name="app_name">Menstrual calendar, pregnancy</string>
    <string name="calendar">Calendar</string>
    <string name="diary">Diary</string>
    <string name="setting">Setting</string>
    <string name="chart">Chart</string>
    <string name="length_cycle_menstruation">Length of the cycle \nThe journey usually lasts 3 - 15 days.</string>
    <string name="length_cycle_periods">Menstrual cycle length? \nThe time of day begins two cycles, usually 23-35 days.</string>
    <string name="date_your_period">Date your last menstrual period?</string>
    <string name="touch_here">Touch here to order</string>
    <string name="done">Done</string>
    <string name="date_start_cycle">The start of the cycle</string>
    <string name="start_cycle">Start cycle</string>
    <string name="select_date">Select date</string>
    <string name="next_cycle">next cycle</string>
    <string name="easy_to_conceive">easy to conceive</string>
    <string name="days_left">days left</string>
    <string name="touch_start_cycle">Start cycle \nTouch</string>
    <string name="touch_end_cycle">End of cycle \nTouch</string>
    <string name="menstruation">Menstruation</string>
    <string name="length_periods">Menstrual length</string>
    <string name="length_cycle">Cycle length</string>
    <string name="maternity">Maternity</string>
    <string name="remind">Remind</string>
    <string name="personalized">Personalized</string>
    <string name="data_and_account">Data and account</string>
    <string name="password">Password</string>
    <string name="follow">Follow the other</string>
    <string name="data_for_doctor">Data for doctor</string>
    <string name="total_installation">Total installation</string>
    <string name="support_us">Support us</string>
    <string name="send_message_to_us">Send message to us</string>
    <string name="rate_us">Rate on Google Play</string>
    <string name="share">Share</string>
    <string name="day">Day</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="menstrual_period_lasts">Menstrual period lasts from 23 to 35 days</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again!!!</string>
    <string name="you_should_typing_menstrual">You should enter the menstrual period from 3 to 15 days</string>
    <string name="you_should_typing_cycle">You should enter the cycle period from 23 to 35 days</string>
    <string name="length_of_the_luteal_phase">Length of the luteal phase</string>
    <string name="we_base_the_luteal_phase">We base this length of luteal phase on your next ovulation estimate. This length usually ranges from 13 to 18 days</string>
    <string name="set_password">Set password</string>
    <string name="delete_password">Delete password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="security_question">Security question. You must reset your password after answering the security question</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="save">Save</string>
    <string name="choose_security_question">Choose security question</string>
    <string name="your_phone_number">Your phone number?</string>
    <string name="your_favorite_color">Your favorite color?</string>
    <string name="your_name">Your name?</string>
    <string name="choose_my_own_question">Choose my own question</string>
    <string name="invalid_password">Invalid password, please re-enter!!!</string>
    <string name="you_just_delete_pass">You just deleted the password</string>
    <string name="login">Login...</string>
    <string name="ask_security_question">Security question?</string>
    <string name="ask_forget_pass">Forget password?</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="you_will_save">You will save your account information at a different address (in case you forget your password) !!!</string>
    <string name="share_mail">Application is for menstrual track, ovulation, symptoms and things you are interested in. I really like this app. Accurate and professional, totally free. Enjoy the experience!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_just_delete_all_data">You just deleted all data!!!</string>
    <string name="subject_of_email">Subject of email</string>
    <string name="message_us">Your comments will help us grow more, Thank you!!!</string>
    <string name="send">Send</string>
    <string name="hi_android_developer">Hi android developer!</string>
    <string name="report_cycle">Report cycle</string>
    <string name="report_pregnancy">Report pregnancy</string>
    <string name="report_ovulation">Report ovulation</string>
    <string name="prompt_enter_business_day">Prompt enter the business day</string>
    <string name="add_medicine">Add medicine</string>
    <string name="prompts_you_to_enter_a_period">Prompts you to enter a period</string>
    <string name="alert_report_cycle">Notification: End of cycle</string>
    <string name="alert_report_easy_to_conceive">Notification: It is easy to conceive</string>
    <string name="alert_report_ovulation">Notification: By the time of ovulation</string>
    <string name="stop_watching">Stop watching your menstrual cycle and start counting down</string>
    <string name="pregnant">Pregnant</string>
    <string name="congratulations">Congratulations! Press OK to turn on pregnancy mode</string>
    <string name="estimate_the_due_date">Estimate the due date</string>
    <string name="childbirth_or_miscarriage">Childbirth or miscarriage</string>
    <string name="no_longer_pregnant">No longer pregnant</string>
    <string name="enable_by_mistake">Enable by mistake</string>
    <string name="turn_off_pregnancy_mode">Turn off pregnancy mode</string>
    <string name="next_ovulation">Next ovulation</string>
    <string name="in_case_no_longer_pregnant">If you have any of the following: \n\n* Give birth to \n* Miscarriage \n* Abortion \n\nClick No longer pregnant</string>
    <string name="end_date_of_pregnancy">End date of pregnancy</string>
    <string name="mistake_turn_on">If you have mistakenly switched to pregnancy mode, you can disable it here</string>
    <string name="turn_off">Turn off</string>
    <string name="days_to_give_birth">days to give birth</string>
    <string name="guess">Guess</string>
    <string name="add_menstruation">Add menstruation</string>
    <string name="conception">Conception</string>
    <string name="the_average_value">The average value</string>
    <string name="menstrual_period">Menstrual period ..........</string>
    <string name="cycle_length">Cycle length ...............</string>
    <string name="cycle_mean_value">Cycle mean value</string>
    <string name="begin">Begin</string>
    <string name="finish">Finish</string>
    <string name="day_average_cycle_length"> day, average cycle length</string>
    <string name="day_the_average_length_of_the_period"> day, the average length of the period</string>
    <string name="length_days">Length (days)</string>
    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="drug">Drug</string>
    <string name="symptom">Symptom</string>
    <string name="mood">Mood</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="head">Head</string>
    <string name="headache">Headache</string>
    <string name="fever">Fever</string>
    <string name="dear">Dear</string>
    <string name="neck_pain">Neck pain</string>
    <string name="shoulder_pain">Shoulder pain</string>
    <string name="backache">Backache</string>
    <string name="flu">Flu</string>
    <string name="sick">Sick</string>
    <string name="camp">Camp</string>
    <string name="itchy">Itchy</string>
    <string name="sweat">Sweat</string>
    <string name="cervical">Cervical</string>
    <string name="sore_throats">Sore throats</string>
    <string name="bleed">Bleed</string>
    <string name="arouse">Arouse</string>
    <string name="gel">Gel</string>
    <string name="dried">Dried</string>
    <string name="wet">Wet</string>
    <string name="bloody">Bloody</string>
    <string name="sour_smell">Sour smell</string>
    <string name="stomach">Stomach</string>
    <string name="puffy">Puffy</string>
    <string name="constipation">Constipation</string>
    <string name="nausea">Nausea</string>
    <string name="undigested">Undigested</string>
    <string name="ovulation">Ovulation</string>
    <string name="mental">Mental</string>
    <string name="pressure">Pressure</string>
    <string name="stubborn">Stubborn</string>
    <string name="tired">Tired</string>
    <string name="confusion">Confusion</string>
    <string name="more_mood">More mood</string>
    <string name="normal">Normal</string>
    <string name="sad">Sad</string>
    <string name="sleepy">Sleepy</string>
    <string name="boring">Boring</string>
    <string name="dizzy">Dizzy</string>
    <string name="rough">Rough</string>
    <string name="allergy">Allergy</string>
    <string name="in_love">In love</string>
    <string name="jealous">Jealous</string>
    <string name="disappointment">Disappoinment</string>
    <string name="monocotyledon">Monocotyledon</string>
    <string name="forgetful">Forgetful</string>
    <string name="miserable">Miserable</string>
    <string name="panic">Panic</string>
    <string name="not_safe">Not safe</string>
    <string name="exhausted">Exhausted</string>
    <string name="worry">Worry</string>
    <string name="hard_to_understand">Had to understand</string>
    <string name="heartless">Heartless</string>
    <string name="incredulous">Incredulous</string>
    <string name="naughty">Naughty</string>
    <string name="weak">Weak</string>
    <string name="bad">Bad</string>
    <string name="hasty">Hasty</string>
    <string name="satisfy">Satisfy</string>
    <string name="attenuate">Attenuate</string>
    <string name="good">Good</string>
    <string name="proud">Proud</string>
    <string name="confident">Confident</string>
    <string name="angry">Angry</string>
    <string name="thin">Thin</string>
    <string name="contraceptives">Contraceptives</string>
    <string name="other_drug">Other drug</string>
    <string name="vaginal_ring">Vaginal ring</string>
    <string name="inject">Inject</string>
    <string name="bandage">Bandage</string>
    <string name="enter_name_drug">Enter the name of the drug</string>
    <string name="abdominal_cramps">Abdominal cramps</string>
    <string name="anxiety">Anxiety</string>
    <string name="astriction">Astriction</string>
    <string name="backaches">Backaches</string>
    <string name="bloating">Bloating</string>
    <string name="body_aches">Body aches</string>
    <string name="cervical_mucus">Cervical mucus</string>
    <string name="chills">Chills</string>
    <string name="confused">Confused</string>
    <string name="cramps">Cramps</string>
    <string name="creamy">Creamy</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="dizziness">Dizziness</string>
    <string name="dry">Dry</string>
    <string name="dyspepsia">Dyspepsia</string>
    <string name="fatigue">Fatigue</string>
    <string name="headaches">Headaches</string>
    <string name="hectic_fever">Hectic fever</string>
    <string name="hungry">Hungry</string>
    <string name="illness">Illness</string>
    <string name="influenza">Influenza</string>
    <string name="insomnia">Insomnia</string>
    <string name="irritability">Irritability</string>
    <string name="irritation">Irritation</string>
    <string name="itch">Itch</string>
    <string name="ask_delete">Are you sure you want to delete?</string>
    <string name="add_temperature">Add Temperature</string>
    <string name="enter_temperature">Enter Temperature</string>
</resources>