<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/hai_muoi_sp">

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_password_dialog_set_pass"
        android:textSize="@dimen/muoi_lam_sp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/edt_confirm_password_dialog_set_pass"
        android:textSize="@dimen/muoi_lam_sp"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/security_question"
        android:textSize="@dimen/muoi_lam_sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <Spinner
        android:id="@+id/spin_dialog_set_pass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></Spinner>

    <EditText
        android:id="@+id/edt_question_dialog_set_pass"
        android:visibility="gone"
        android:hint="@string/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/edt_answer_dialog_set_pass"
        android:hint="@string/answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:textSize="@dimen/muoi_lam_sp"
        android:id="@+id/btn_save_dialog_set_pass"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:textSize="@dimen/muoi_hai_sp"
        android:text="@string/you_will_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>