<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="@dimen/muoi_dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bon_muoi_dp"
        android:gravity="center_vertical"
        android:text="@string/add_temperature"
        android:textSize="@dimen/hai_lam_sp" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edt_dialog_choose_temperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bon_muoi_dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/enter_temperature"
        android:paddingLeft="@dimen/nam_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bon_muoi_dp"
        android:gravity="right"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_cancel_dialog_choose_temperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/muoi_lam_sp" />

        <TextView
            android:id="@+id/tv_ok_dialog_choose_temperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="@dimen/muoi_lam_sp" />

    </LinearLayout>

</LinearLayout>