<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/hai_muoi_dp">

    <TextView
        android:gravity="center_vertical"
        android:text="@string/ask_security_question"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/hai_muoi_sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nam_muoi_dp" />

    <EditText
        android:id="@+id/edt_question_dialog_ask_security_question"
        android:textSize="@dimen/hai_muoi_sp"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nam_muoi_dp" />

    <EditText
        android:id="@+id/edt_answer_dialog_ask_security_question"
        android:hint="@string/answer"
        android:textSize="@dimen/hai_muoi_sp"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nam_muoi_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/hai_muoi_dp"></LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nam_muoi_dp">

        <Button
            android:id="@+id/btn_cancel_dialog_ask_security_question"
            android:text="@string/cancel"
            android:textSize="@dimen/muoi_lam_sp"
            android:background="@null"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_ok_dialog_ask_security_question"
            android:text="@string/ok"
            android:textSize="@dimen/muoi_lam_sp"
            android:background="@null"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>