<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.skyfree.kinhnguyetmangthai.activity.RequestAcountActivity">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:background="@color/colorBlur"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_margin="10dp"
            android:src="@drawable/ic_lock"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/edt_pass_ra"
            android:hint="@string/password"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:background="@null"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_ra"
        android:background="@color/colorRedBlur"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tv_security_question_ra"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorRedBlur"
        android:text="@string/ask_security_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_forget_pass_ra"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorRedBlur"
        android:text="@string/ask_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
